7.6.0 (25-03-2024)
- Refactor: Removing dependencies from bennu-struts [#qubIT-Fenix-5098]

7.5.0 (06-03-2024)
- Refactor: PersonServices not extending academic-extensions service anymore [#qubIT-Fenix-4784]
- Improvement: Adds fenixedu OSS DM [#qubIT-Omnis-4736]

7.4.0 (09-10-2023)
- Refactor: Remove hardcoded permissions from academic-core domain [#qubIT-Fenix-4434]

7.3.2 (04-08-2023)
- Bug fix: Change registration deactivation task to support all type of calendars 

7.3.1 (02-08-2023)
- Refactor: Change student curricular plan comparator to use interval

7.3.0 (27-07-2023)
- Refactor: Make compatible with latest academic-core
- Refactor: Remove deprecated evaluation season management functionalities
- Refactor: Remove deprecated registration history functionality

7.2.0 (28-06-2023)
- Refactor: Make compatible with latest academic-core and academic-extensions 
- Refactor: Remove deprecated execution course pages overrides and services

7.1.1 (06-02-2023)
- Refactor: Add missing Department methods in order to mantain retro-compability

7.1.0 (06-02-2023)
- Refactor: Add entity Department, from academic-core

7.0.6 (17-01-2023)
- Bug fix: Struts messages not supported anymore

7.0.5 (24-11-2022)
- Refactor: Replace usage of RegistrationStateType by RegistrationStateTypeEnum

7.0.4 (22-11-2022)
- Refactor: Replace usage of RegistrationStateType by RegistrationStateTypeEnum

7.0.3 (07-11-2022)
- Bug Fix: Prevent service requests without registration

7.0.2 (26-10-2022)
- Refactor: Remove branch group subclasses

7.0.1 (17-10-2022)
- Refactor: Remove deprecated shifts enrolment service

7.0.0 (10-10-2022)
- Refactor: Remove deprecated functionalities

6.28.2 (21-09-2022)
- Improvement: Change moodle export auth to ldap
- Refactor: Replace usage of deprecated evaluation season periods API

6.28.1 (21-09-2022)
- Bug Fix: ConclusionInformationDataProvider should not read execution year by date